# rhi

./: .flake8  README.md  mypy.ini  pyproject.toml  run_test.sh
rfind/: cmd.py  config.py
rfind/commands/: add.py  command.py  flush.py  get_all.py  run.py
rhi/: __init__.py  cmd.py  config.py  exceptions.py
rhi/commands/: add.py  command.py  delete.py  flush.py  get.py  get_all.py  init.py  run.py  version.py
rhi/libs/: helper.py
tests/: test_rfind.py  test_rhi.py
tests/commands/: test_add.py  test_get.py
