[tool.poetry]
name = "rhi"
version = "0.0.2"
description = "rhi remote history command"
authors = ["warabanshi <warabanshi@gmail.com>"]
homepage = "https://github.com/warabanshi/"
repository = "https://github.com/warabanshi/rhi"
documentation = "https://github.com/warabanshi/rhi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rhi = "rhi.cmd:main"
